--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
+    "marked": "^2.1.2",
     "next": "9.5.3",
     "next-compose-plugins": "^2.2.0",
+    "next-mdx-remote": "^3.0.8",
     "next-optimized-images": "^2.5.4",
     "prettier": "^2.1.2",
     "rc-drawer": "^4.1.0",
