--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.3.1",
     "isomorphic-unfetch": "^3.0.0",
     "marked": "^2.1.2",
     "next": "9.5.3",
