--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.13.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.13.0",
+    "react-facebook": "^8.1.4",
     "react-ga": "^3.1.2",
     "react-icons": "^3.10.0",
     "react-modal-video": "1.2.6",
