--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-facebook": "^8.1.4",
     "react-ga": "^3.1.2",
     "react-icons": "^3.10.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-modal-video": "1.2.6",
     "react-multi-carousel": "^2.5.5",
     "react-scroll": "^1.8.0",
